--- a/labAnswers.html
+++ b/labAnswers.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>R-ALAB 308H.4.2 - Arrays, Loops, and Conditionals</h1>
+    <script src="labAnswers.js"></script>
 </body>
 </html>
